<resources>
    <string name="app_name">Let\'s Talk</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="_9">9</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="username">userName</string>
    <string name="photos">Photos</string>
    <string name="_6">6</string>
    <string name="my_friends">My Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_binaural1">Binaural1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    family, selfHarm, friends,
    hopes, bullying, health, work, parenting,
    education, religion, lgbt, positive,
    pregnancy, mentalHealth, addiction,
    selfCare, grief, anxiety, disabilities,
    depression, others
    <string-array name="postType">
        <item>Family</item>
        <item>Self Harm</item>
        <item>Friends</item>
        <item>Hopes</item>
        <item>Bullying</item>
        <item>Health</item>
        <item>Work</item>
        <item>Parenting</item>
        <item>Education</item>
        <item>Religion</item>
        <item>LGBT</item>
        <item>Positive</item>
        <item>Pregnancy</item>
        <item>Mental Health</item>
        <item>Addiction</item>
        <item>Self Care</item>
        <item>Grief</item>
        <item>Anxiety</item>
        <item>Disabilities</item>
        <item>Depression</item>
        <item>Others</item>
    </string-array>
</resources>